# beverage

./: Cargo.toml  Trunk.toml  beverage-3ffa60e282f545fd.js  beverage-67265a27db9d95fe.js  beverage-7ef3b1e392c18363.js  beverage-914c685884edb276.js  beverage-e0a7cc3f86f71e2b.js  beverage-e247fe4f38495424.js  bevy_game-9580b04033a8d6ac.js  index.html
.github/workflows/: release.yaml
assets/: manifest.assets
src/: background_plugin.rs  config_plugin.rs  kitty_plugin.rs  lib.rs  loading_plugin.rs  main.rs  paddle_plugin.rs  yarn_plugin.rs
